Remove -XX:MaxPermSize=512m from execution scripts. Add screenshot for README.md