@@ -9,4 +9,4 @@ cd ../target
 # 900m max usage for 8 threads
 mem_alloc="900m"
 
-java -XX:+AggressiveOpts -server -Xms$mem_alloc -Xmx$mem_alloc -XX:MaxPermSize=512m $all_args -jar e2solver.jar
+java -XX:+AggressiveOpts -server -Xms$mem_alloc -Xmx$mem_alloc $all_args -jar e2solver.jar
